# src/routes/index.js
@@ -1,4 +1,5 @@
 const { Router } = require("express");
+const { auth } = require("express-oauth2-jwt-bearer");
 const router = Router();
 
 const userController = require("../controllers/user.controller");
@@ -6,17 +7,17 @@ const imageController = require("../controllers/image.controller");
 const tagController = require("../controllers/tag.controller");
 const galleryController = require("../controllers/gallery.controller");
 
+const checkJwt = auth({
+  audience: "https://proyecto-IAW/api",
+  issuerBaseURL: `https://dev-0f-5co-0.us.auth0.com/`,
+});
+
 //--USERS--
 router.get("/users", userController.getUsers);
 router.get("/users.compact", userController.getUsersCompact);
 router.get("/user/:username", userController.getUserByUsername);
 router.get("/user/id/:id", userController.getUserById);
 router.get("/user/email/:email", userController.getUserByEmail);
-router.patch(
-  "/user/:username/email",
-  userController.emailTaken,
-  userController.updateUserEmail
-);
 router.patch("/user/:username/bio", userController.updateUserBio);
 router.patch("/user/:username/picture", userController.updateUserPicture);
 router.post(
@@ -60,11 +61,7 @@ router.delete(
   imageController.imageExists,
   imageController.removeTagFromImage
 );
-router.post(
-  "/image.new",
-  userController.userExistsBody,
-  imageController.uploadImage
-);
+router.post("/image.new", checkJwt, imageController.uploadImage);
 router.delete("/image/:id", imageController.deleteImage);
 
 //--GALLERIES--
