# swagger.json
@@ -19,15 +19,11 @@
       "name": "gallery"
     }
   ],
-  "schemes": [
-    "https"
-  ],
+  "schemes": ["https"],
   "paths": {
     "/users": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Get all users",
         "operationId": "getUsers",
         "responses": {
@@ -42,9 +38,7 @@
     },
     "/users.compact": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Get all users in compact format",
         "operationId": "getUsersCompact",
         "responses": {
@@ -59,9 +53,7 @@
     },
     "/user.new": {
       "post": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Create new user",
         "operationId": "createUser",
         "parameters": [
@@ -87,9 +79,7 @@
     },
     "/user/{username}": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Get user by username",
         "operationId": "getUserByName",
         "parameters": [
@@ -114,9 +104,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Delete user",
         "operationId": "deleteUser",
         "parameters": [
@@ -140,9 +128,7 @@
     },
     "/user/id/{id}": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Get user by id",
         "operationId": "getUserById",
         "parameters": [
@@ -169,9 +155,7 @@
     },
     "/user/email/{email}": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Get user by email",
         "operationId": "getUserByEmail",
         "parameters": [
@@ -196,49 +180,9 @@
         }
       }
     },
-    "/user/{username}/email": {
-      "patch": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Update a user's email",
-        "operationId": "updateEmail",
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "description": "The name of the user that needs to be updated. ",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "in": "body",
-            "name": "body",
-            "description": "New email",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Email"
-            }
-          }
-        ],
-        "responses": {
-          "404": {
-            "description": "User not found"
-          },
-          "409": {
-            "description": "Email already in use"
-          },
-          "default": {
-            "description": "successful operation"
-          }
-        }
-      }
-    },
     "/user/{username}/bio": {
       "patch": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Update a user's biography",
         "operationId": "updateBio",
         "parameters": [
@@ -271,9 +215,7 @@
     },
     "/user/{username}/picture": {
       "patch": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Update a user's profile picture",
         "operationId": "updatePic",
         "parameters": [
@@ -306,9 +248,7 @@
     },
     "/tags": {
       "get": {
-        "tags": [
-          "tag"
-        ],
+        "tags": ["tag"],
         "summary": "Get all tags",
         "operationId": "getTags",
         "responses": {
@@ -323,9 +263,7 @@
     },
     "/tag/{name}": {
       "get": {
-        "tags": [
-          "tag"
-        ],
+        "tags": ["tag"],
         "summary": "Get tag by name",
         "operationId": "getTagByName",
         "parameters": [
@@ -352,9 +290,7 @@
     },
     "/tag/id/{id}": {
       "get": {
-        "tags": [
-          "tag"
-        ],
+        "tags": ["tag"],
         "summary": "Get tag by id",
         "operationId": "getTagById",
         "parameters": [
@@ -381,9 +317,7 @@
     },
     "/images": {
       "get": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Get all images",
         "operationId": "getImage",
         "responses": {
@@ -398,9 +332,7 @@
     },
     "/images.compact": {
       "get": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Get all images in compact format",
         "operationId": "getImagesCompact",
         "responses": {
@@ -415,9 +347,7 @@
     },
     "/image.new": {
       "post": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Upload new image",
         "operationId": "uploadImage",
         "parameters": [
@@ -443,9 +373,7 @@
     },
     "/image/{id}": {
       "get": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Get image by id",
         "operationId": "getImageById",
         "parameters": [
@@ -470,9 +398,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Delete image",
         "operationId": "deleteImage",
         "parameters": [
@@ -496,9 +422,7 @@
     },
     "/image/{id}/tags": {
       "get": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Get image tags",
         "operationId": "getImageTags",
         "parameters": [
@@ -525,9 +449,7 @@
     },
     "/user/{username}/images": {
       "get": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Get all images by uploader's username",
         "operationId": "getImageByUsername",
         "parameters": [
@@ -554,9 +476,7 @@
     },
     "/image/{id}/description": {
       "patch": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Update an image's description",
         "operationId": "updateDescription",
         "parameters": [
@@ -589,9 +509,7 @@
     },
     "/image/{image_id}/tags/{tag_id}": {
       "post": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Add tag to image",
         "operationId": "addTag",
         "parameters": [
@@ -623,9 +541,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "image"
-        ],
+        "tags": ["image"],
         "summary": "Remove tag from image",
         "operationId": "removeTag",
         "parameters": [
@@ -656,9 +572,7 @@
     },
     "/galleries": {
       "get": {
-        "tags": [
-          "gallery"
-        ],
+        "tags": ["gallery"],
         "summary": "Get all galleries",
         "operationId": "getGalleries",
         "responses": {
@@ -673,9 +587,7 @@
     },
     "/gallery/{id}": {
       "get": {
-        "tags": [
-          "gallery"
-        ],
+        "tags": ["gallery"],
         "summary": "Get gallery by id",
         "operationId": "getGalleryById",
         "parameters": [
@@ -700,9 +612,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "gallery"
-        ],
+        "tags": ["gallery"],
         "summary": "Delete gallery",
         "operationId": "deleteGallery",
         "parameters": [
@@ -726,9 +636,7 @@
     },
     "/user/{username}/galleries": {
       "get": {
-        "tags": [
-          "gallery"
-        ],
+        "tags": ["gallery"],
         "summary": "Get all galleries by owner's username",
         "operationId": "getGalleriesByUsername",
         "parameters": [
@@ -755,9 +663,7 @@
     },
     "/gallery/{gallery_id}/images/{image_id}": {
       "post": {
-        "tags": [
-          "gallery"
-        ],
+        "tags": ["gallery"],
         "summary": "Add image to gallery",
         "operationId": "addImage",
         "parameters": [
@@ -789,9 +695,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "gallery"
-        ],
+        "tags": ["gallery"],
         "summary": "Remove tag from image",
         "operationId": "removeImage",
         "parameters": [
